# enterprise-agent-orchestrator

./: .env.example  .gitignore  README.md  app.py  cli.py  pyproject.toml
.github/workflows/: ci.yml
data/: mock_budget.json  mock_kpis.json  mock_roadmap.json
docs/adr/: 001-hub-spoke-over-peer-to-peer.md  002-langgraph-over-crewai.md  003-mock-data-strategy.md
src/: config.py  llm_factory.py  orchestrator.py  routing.py  state.py  supervisor.py
src/agents/: __init__.py  finance_agent.py  operations_agent.py  planning_agent.py
src/tools/: __init__.py  finance_tools.py  operations_tools.py  planning_tools.py
tests/: conftest.py  test_finance_agent.py  test_operations_agent.py  test_orchestrator.py  test_planning_agent.py  test_routing.py  test_state.py
